--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@expo/vector-icons": "^14.1.0",
     "@lottiefiles/dotlottie-react": "^0.13.5",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^23.3.1",
+    "@react-native-firebase/auth": "^23.3.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -32,6 +34,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
+    "firebase": "^12.2.1",
     "lottie-ios": "^4.5.1",
     "lottie-react-native": "^7.3.3",
     "lottie-web": "^5.13.0",
